--- a/apps/service-scrape/Function_BatchScrapeSuburbs/build.gradle
+++ b/apps/service-scrape/Function_BatchScrapeSuburbs/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'java'
     id 'io.quarkus'
     id 'com.diffplug.spotless' version '7.0.4'
+    id 'org.jsonschema2pojo' version '1.2.2'
 }
 
 repositories {
@@ -11,12 +12,14 @@ repositories {
 
 dependencies {
     implementation project(':Lib_DbServiceScrape')
+    implementation enforcedPlatform("${quarkusPlatformGroupId}:${quarkusPlatformArtifactId}:${quarkusPlatformVersion}")
 
     implementation 'io.quarkiverse.jooq:quarkus-jooq:2.1.0'
-    implementation("io.quarkus:quarkus-rest-jackson")
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.18.3'
+    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.18.3'
+    implementation 'io.quarkus:quarkus-rest-jackson'
     implementation 'io.quarkus:quarkus-jdbc-postgresql'
     implementation 'io.quarkus:quarkus-opentelemetry'
-    implementation enforcedPlatform("${quarkusPlatformGroupId}:${quarkusPlatformArtifactId}:${quarkusPlatformVersion}")
     implementation 'io.quarkus:quarkus-arc'
     implementation 'io.quarkus:quarkus-rest'
 
@@ -27,7 +30,7 @@ dependencies {
 }
 
 test {
-    systemProperty "java.util.logging.manager", "org.jboss.logmanager.LogManager"
+    systemProperty 'java.util.logging.manager', 'org.jboss.logmanager.LogManager'
 }
 
 spotless {
@@ -36,4 +39,18 @@ spotless {
         removeUnusedImports()
         palantirJavaFormat()
     }
+}
+
+jsonSchema2Pojo {
+    sourceType = 'json'
+    source = files('src/main/resources/generated')
+
+    targetPackage = 'org.scrape.generated'
+    targetDirectory = file('src/main/java')
+
+    annotationStyle = 'jackson2'
+    includeGetters = false
+    includeSetters = false
+    includeHashcodeAndEquals = false
+    includeToString = false
 }
