--- a/apps/observability/package.json
+++ b/apps/observability/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@observability",
-  "version": "1.0.0",
-  "scripts": {
-    "docker:down": "docker compose down -v",
-    "docker:up": "docker compose up --build -d",
-  }
+    "name": "@observability/observability",
+    "version": "1.0.0",
+    "scripts": {
+        "docker:down": "docker compose down -v",
+        "docker:up": "docker compose up --build -d"
+    }
 }
