--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,8 @@ node_modules
 .nx/installation
 .nx/cache
 .nx/workspace-data
+.cursor/rules/nx-rules.mdc
+.github/instructions/nx.instructions.md
 
 # Parcel
 .parcel-cache
