--- a/apps/service-scrape/lib-db_service_scrape/package.json
+++ b/apps/service-scrape/lib-db_service_scrape/package.json
@@ -1,48 +1,40 @@
 {
-  "name": "@service-scrape/lib-db_service_scrape",
-  "version": "1.0.0",
-  "main": "./dist/index.cjs",
-  "module": "./dist/index.js",
-  "types": "./dist/index.d.ts",
-  "exports": {
-    "import": {
-      "types": "./dist/index.d.ts",
-      "import": "./dist/index.js"
+    "name": "@service-scrape/lib-db_service_scrape",
+    "version": "1.0.0",
+    "module": "./dist/index.js",
+    "types": "./dist/index.d.ts",
+    "exports": {
+        "import": {
+            "types": "./dist/index.d.ts",
+            "import": "./dist/index.js"
+        }
     },
-    "require": {
-      "types": "./dist/index.d.cts",
-      "require": "./dist/index.cjs"
-    }
-  },
-  "files": ["dist"],
-  "scripts": {
-    "format": "biome format --write",
-    "docker:down": "docker compose down -v",
-    "docker:up": "docker compose up --build -d && sleep 1 && drizzle-kit migrate",
-    "studio": "drizzle-kit studio",
-    "generate": "drizzle-kit generate --name",
-    "migrate": "drizzle-kit migrate",
-    "test": "pnpm run /^test:/",
-    "test:lint": "biome lint --write",
-    "test:type": "tsc",
-    "test:unit": "vitest run --coverage",
-    "dev:test:unit": "vitest --coverage",
-    "build": "tsup src/index.ts --format cjs,esm --dts --clean --sourcemap"
-  },
-  "dependencies": {
-    "consola": "3.4.0",
-    "dotenv": "16.4.7",
-    "drizzle-kit": "0.30.4",
-    "drizzle-orm": "0.40.0",
-    "drizzle-zod": "0.7.0",
-    "kysely": "0.27.5",
-    "pg": "8.13.3",
-    "postgres": "3.4.5",
-    "zod": "3.24.2"
-  },
-  "devDependencies": {
-    "@faker-js/faker": "9.5.0",
-    "@types/pg": "8.11.11"
-  },
-  "type": "module"
+    "files": ["dist"],
+    "scripts": {
+        "format": "biome format --write",
+        "docker:down": "docker compose down -v",
+        "docker:up": "docker compose up --build -d",
+        "migrate": "node ./src/migrate.ts | pnpm dlx pino-pretty",
+        "test": "pnpm run /^test:/",
+        "test:lint": "biome lint --write",
+        "test:type": "tsc",
+        "test:unit": "vitest run --coverage",
+        "dev:test:unit": "vitest --coverage",
+        "build": "tsup src/index.ts --format esm --dts --clean --sourcemap"
+    },
+    "dependencies": {
+        "dotenv": "16.4.7",
+        "kysely": "0.27.5",
+        "kysely-codegen": "^0.18.5",
+        "kysely-postgis": "^0.5.2",
+        "pg": "8.13.3",
+        "pino": "^9.7.0",
+        "zod": "3.24.2"
+    },
+    "devDependencies": {
+        "pino-pretty": "^13.1.1",
+        "@faker-js/faker": "9.5.0",
+        "@types/pg": "8.11.11"
+    },
+    "type": "module"
 }
