--- a/apps/service-scrape/lib-db_service_scrape/package.json
+++ b/apps/service-scrape/lib-db_service_scrape/package.json
@@ -9,7 +9,9 @@
             "import": "./dist/index.js"
         }
     },
-    "files": ["dist"],
+    "files": [
+        "dist"
+    ],
     "scripts": {
         "format": "biome format --write",
         "docker:down": "docker compose down -v",
@@ -24,7 +26,6 @@
     "dependencies": {
         "dotenv": "16.4.7",
         "kysely": "0.27.5",
-        "kysely-codegen": "^0.18.5",
         "pg": "8.13.3",
         "pino": "^9.7.0",
         "zod": "3.24.2"
@@ -32,6 +33,7 @@
     "devDependencies": {
         "@faker-js/faker": "9.5.0",
         "@types/pg": "8.11.11",
+        "kysely-codegen": "^0.18.5",
         "pino-pretty": "^13.1.1"
     },
     "type": "module"
