--- a/biome.json
+++ b/biome.json
@@ -1,5 +1,5 @@
 {
-    "$schema": "https://biomejs.dev/schemas/1.8.3/schema.json",
+    "$schema": "https://biomejs.dev/schemas/2.1.4/schema.json",
     "formatter": {
         "enabled": true,
         "indentStyle": "space",
@@ -15,10 +15,6 @@
             },
             "suspicious": {
                 "noExplicitAny": "off"
-            },
-            "style": {
-                "noArguments": "off",
-                "noNonNullAssertion": "off"
             }
         }
     },
@@ -29,7 +25,7 @@
         }
     },
     "files": {
-        "ignore": [
+        "experimentalScannerIgnores": [
             "coverage",
             "dist",
             "node_modules"
