--- a/package.json
+++ b/package.json
@@ -7,29 +7,29 @@
         "test:arch": "pnpm depcruise -v -T dot . | dot -T svg | depcruise-wrap-stream-in-html > dependency-graph.html && depcruise .",
         "build": "nx run-many -t build",
         "knip": "knip",
-        "bump": "",
+        "bump": "npx npm-check-updates -u && pnpm install",
         "docker:up": "nx affected -t docker:up",
         "docker:down": "nx affected -t docker:down",
         "build:ci": "nx affected -t build",
         "test:ci": "nx affected -t test:lint test:type test:unit test:perf"
     },
     "devDependencies": {
-        "@biomejs/biome": "1.9.4",
-        "@types/node": "22.13.4",
-        "@vitest/coverage-v8": "3.0.7",
+        "@biomejs/biome": "2.1.4",
+        "@types/node": "24.2.0",
+        "@vitest/coverage-v8": "3.2.4",
         "dependency-cruiser": "^17.0.1",
-        "knip": "5.43.6",
-        "nx": "20.4.6",
-        "simple-git-hooks": "2.11.1",
-        "tsup": "8.4.0",
-        "typescript": "5.7.3",
-        "vite": "6.1.1",
-        "vitest": "3.0.7"
+        "knip": "5.62.0",
+        "nx": "21.3.11",
+        "simple-git-hooks": "2.13.1",
+        "tsup": "8.5.0",
+        "typescript": "5.9.2",
+        "vite": "7.1.1",
+        "vitest": "3.2.4"
     },
     "simple-git-hooks": {
         "pre-commit": "pnpm format",
         "pre-push": "pnpm test:arch"
     },
-    "packageManager": "pnpm@9.12.3",
+    "packageManager": "pnpm@10.14.0",
     "type": "module"
 }
