--- a/apps/service-scrape/function-batch_scrape_suburbs/package.json
+++ b/apps/service-scrape/function-batch_scrape_suburbs/package.json
@@ -3,6 +3,7 @@
     "version": "1.0.0",
     "scripts": {
         "format": "biome format --write",
+        "bump": "npx npm-check-updates -u && pnpm install",
         "test": "pnpm run /^test:/",
         "test:lint": "biome lint --write",
         "test:type": "tsc",
@@ -11,23 +12,24 @@
         "dev": "vite dev"
     },
     "devDependencies": {
-        "@hono/vite-dev-server": "0.18.1"
+        "@hono/vite-dev-server": "0.20.1"
     },
     "dependencies": {
         "@opentelemetry/api": "1.9.0",
-        "@opentelemetry/exporter-logs-otlp-proto": "0.57.2",
-        "@opentelemetry/exporter-trace-otlp-proto": "0.57.2",
-        "@opentelemetry/resources": "1.30.1",
-        "@opentelemetry/sdk-logs": "0.57.2",
-        "@opentelemetry/sdk-node": "0.57.2",
-        "@opentelemetry/sdk-trace-base": "1.30.1",
-        "@opentelemetry/semantic-conventions": "1.30.0",
+        "@opentelemetry/exporter-logs-otlp-proto": "0.203.0",
+        "@opentelemetry/exporter-trace-otlp-proto": "0.203.0",
+        "@opentelemetry/resources": "2.0.1",
+        "@opentelemetry/sdk-logs": "0.203.0",
+        "@opentelemetry/sdk-node": "0.203.0",
+        "@opentelemetry/sdk-trace-base": "2.0.1",
+        "@opentelemetry/semantic-conventions": "1.36.0",
         "@service-scrape/lib-db_service_scrape": "workspace:*",
         "@turf/turf": "7.2.0",
-        "cheerio": "1.0.0",
-        "dotenv": "16.4.7",
-        "hono": "4.7.1",
-        "zod": "3.24.2"
+        "cheerio": "1.1.2",
+        "dotenv": "17.2.1",
+        "hono": "4.9.0",
+        "kysely": "0.28.4",
+        "zod": "4.0.15"
     },
     "type": "module"
 }
