--- a/apps/service-scrape/lib-db_service_scrape/package.json
+++ b/apps/service-scrape/lib-db_service_scrape/package.json
@@ -14,6 +14,7 @@
     ],
     "scripts": {
         "format": "biome format --write",
+        "bump": "npx npm-check-updates -u && pnpm install",
         "docker:down": "docker compose down -v",
         "migrate": "node ./migrate.ts | pnpm dlx pino-pretty",
         "test": "pnpm run /^test:/",
@@ -24,15 +25,15 @@
         "build": "tsup src/index.ts --format esm --dts --clean --sourcemap"
     },
     "dependencies": {
-        "dotenv": "16.4.7",
-        "kysely": "0.27.5",
-        "pg": "8.13.3",
-        "pino": "^9.7.0",
-        "zod": "3.24.2"
+        "dotenv": "17.2.1",
+        "kysely": "0.28.4",
+        "pg": "8.16.3",
+        "pino": "^9.8.0",
+        "zod": "4.0.15"
     },
     "devDependencies": {
-        "@faker-js/faker": "9.5.0",
-        "@types/pg": "8.11.11",
+        "@faker-js/faker": "9.9.0",
+        "@types/pg": "8.15.5",
         "kysely-codegen": "^0.18.5",
         "pino-pretty": "^13.1.1"
     },
