--- a/apps/service-scrape/script/package.json
+++ b/apps/service-scrape/script/package.json
@@ -14,6 +14,7 @@
     },
     "type": "module",
     "devDependencies": {
-        "consola": "3.4.2"
+        "pino": "^9.8.0",
+        "pino-pretty": "^13.1.1"
     }
 }
