--- a/apps/service-scrape/function-batch_scrape_suburbs/package.json
+++ b/apps/service-scrape/function-batch_scrape_suburbs/package.json
@@ -12,12 +12,14 @@
         "dev": "vite dev"
     },
     "devDependencies": {
-        "@hono/vite-dev-server": "0.20.1"
+        "@hono/vite-dev-server": "0.20.1",
+        "pino-pretty": "^13.1.1"
     },
     "dependencies": {
         "@opentelemetry/api": "1.9.0",
         "@opentelemetry/exporter-logs-otlp-proto": "0.203.0",
         "@opentelemetry/exporter-trace-otlp-proto": "0.203.0",
+        "@opentelemetry/instrumentation-pino": "^0.50.0",
         "@opentelemetry/resources": "2.0.1",
         "@opentelemetry/sdk-logs": "0.203.0",
         "@opentelemetry/sdk-node": "0.203.0",
@@ -29,6 +31,7 @@
         "dotenv": "17.2.1",
         "hono": "4.9.0",
         "kysely": "0.28.4",
+        "pino": "^9.8.0",
         "zod": "4.0.15"
     },
     "type": "module"
