--- a/apps/observability/package.json
+++ b/apps/observability/package.json
@@ -2,6 +2,7 @@
     "name": "@observability/observability",
     "version": "1.0.0",
     "scripts": {
+        "format": "biome format --write",
         "docker:down": "docker compose down -v",
         "docker:up": "docker compose up --build -d"
     }
