--- a/apps/service-scrape/lib-db_service_scrape/package.json
+++ b/apps/service-scrape/lib-db_service_scrape/package.json
@@ -28,14 +28,14 @@
         "dotenv": "17.2.1",
         "kysely": "0.28.4",
         "pg": "8.16.3",
-        "pino": "^9.8.0",
-        "zod": "4.0.15"
+        "pino": "9.8.0",
+        "zod": "4.0.17"
     },
     "devDependencies": {
         "@faker-js/faker": "9.9.0",
         "@types/pg": "8.15.5",
-        "kysely-codegen": "^0.18.5",
-        "pino-pretty": "^13.1.1"
+        "kysely-codegen": "0.18.5",
+        "pino-pretty": "13.1.1"
     },
     "type": "module"
 }
