--- a/apps/service-scrape/script/package.json
+++ b/apps/service-scrape/script/package.json
@@ -14,7 +14,7 @@
     },
     "type": "module",
     "devDependencies": {
-        "pino": "^9.8.0",
-        "pino-pretty": "^13.1.1"
+        "pino": "9.8.0",
+        "pino-pretty": "13.1.1"
     }
 }
