--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "test:arch": "pnpm depcruise -v -T dot . | dot -T svg | depcruise-wrap-stream-in-html > dependency-graph.html && depcruise .",
         "build": "nx run-many -t build",
         "knip": "knip",
-        "bump": "npx npm-check-updates -u && pnpm install && pnpm -r bump",
+        "bump": "npx npm-check-updates -u && pnpm -r bump && npx syncpack@alpha fix && pnpm i",
         "docker:up": "nx affected -t docker:up",
         "docker:down": "nx affected -t docker:down",
         "build:ci": "nx affected -t build",
@@ -15,14 +15,14 @@
     },
     "devDependencies": {
         "@biomejs/biome": "2.1.4",
-        "@types/node": "24.2.0",
+        "@types/node": "*",
         "@vitest/coverage-v8": "3.2.4",
         "dependency-cruiser": "^17.0.1",
         "knip": "5.62.0",
         "nx": "21.3.11",
         "simple-git-hooks": "2.13.1",
         "tsup": "8.5.0",
-        "typescript": "5.9.2",
+        "typescript": "~5.9.2",
         "vite": "7.1.1",
         "vitest": "3.2.4"
     },
