--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
     "scripts": {
         "preinstall": "npx only-allow pnpm",
         "postinstall": "simple-git-hooks",
-        "format": "nx run-many -t format",
+        "format": "biome format --write",
+        "knip": "knip",
+        "bump": "npx syncpack@alpha update && npx syncpack@alpha fix && pnpm i",
         "test": "nx run-many -t test:lint test:type test:unit test:perf test:arch",
         "test:arch": "pnpm depcruise -v -T dot . | dot -T svg | depcruise-wrap-stream-in-html > dependency-graph.html && depcruise .",
         "build": "nx run-many -t build",
-        "knip": "knip",
-        "bump": "npx npm-check-updates -u && pnpm -r bump && npx syncpack@alpha fix && pnpm i",
         "docker:up": "nx affected -t docker:up",
         "docker:down": "nx affected -t docker:down",
         "build:ci": "nx affected -t build",
