--- a/biome.json
+++ b/biome.json
@@ -26,12 +26,7 @@
         }
     },
     "files": {
-        "includes": [
-            "**/*",
-            "!**/coverage/**",
-            "!**/dist/**",
-            "!**/node_modules/**"
-        ],
+        "includes": ["**/*", "!**/coverage/**", "!**/dist/**", "!**/node_modules/**"],
         "ignoreUnknown": true
     },
     "assist": {
