--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,33 +1,31 @@
 {
-  "compilerOptions": {
-    /* Strictest Check */
-    "strict": true,
-    "allowUnusedLabels": false,
-    "allowUnreachableCode": false,
-    "exactOptionalPropertyTypes": true,
-    "noFallthroughCasesInSwitch": true,
-    "noImplicitOverride": true,
-    "noImplicitReturns": true,
-    "noPropertyAccessFromIndexSignature": true,
-    "noUncheckedIndexedAccess": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    /* Check Config */
-    "checkJs": true,
-    "skipLibCheck": true,
-    "pretty": true,
-    /* Module Config */
-    "target": "ESNext",
-    "isolatedModules": true,
-    "esModuleInterop": true,
-    "module": "ESNext",
-    "moduleResolution": "bundler",
-    "resolveJsonModule": true,
-    "allowImportingTsExtensions": true,
-    /* do not output */
-    "noEmit": true
-  },
-  "exclude": [
-    "**/dist"
-  ]
+    "compilerOptions": {
+        /* Strictest Check */
+        "strict": true,
+        "allowUnusedLabels": false,
+        "allowUnreachableCode": false,
+        "exactOptionalPropertyTypes": true,
+        "noFallthroughCasesInSwitch": true,
+        "noImplicitOverride": true,
+        "noImplicitReturns": true,
+        "noPropertyAccessFromIndexSignature": true,
+        "noUncheckedIndexedAccess": true,
+        "noUnusedLocals": true,
+        "noUnusedParameters": true,
+        /* Check Config */
+        "checkJs": true,
+        "skipLibCheck": true,
+        "pretty": true,
+        /* Module Config */
+        "target": "ESNext",
+        "isolatedModules": true,
+        "esModuleInterop": true,
+        "module": "ESNext",
+        "moduleResolution": "bundler",
+        "resolveJsonModule": true,
+        "allowImportingTsExtensions": true,
+        /* do not output */
+        "noEmit": true
+    },
+    "exclude": ["**/dist"]
 }
