chore: bump dep version using syncpack

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
         "postinstall": "simple-git-hooks",
         "format": "biome format --write",
         "knip": "knip",
-        "bump": "npx syncpack@alpha update && npx syncpack@alpha fix && pnpm i",
+        "bump": "exec syncpack update && exec syncpack fix && pnpm i",
         "test": "nx run-many -t test:lint test:type test:unit test:perf test:arch",
         "test:arch": "pnpm depcruise -v -T dot . | dot -T svg | depcruise-wrap-stream-in-html > dependency-graph.html && depcruise .",
         "build": "nx run-many -t build",
@@ -21,6 +21,7 @@
         "knip": "5.62.0",
         "nx": "21.3.11",
         "simple-git-hooks": "2.13.1",
+        "syncpack": "14.0.0-alpha.19",
         "tsup": "8.5.0",
         "typescript": "~5.9.2",
         "vite": "7.1.1",
