--- a/apps/service-scrape/lib-db_service_scrape/package.json
+++ b/apps/service-scrape/lib-db_service_scrape/package.json
@@ -13,7 +13,6 @@
         "dist"
     ],
     "scripts": {
-        "docker:down": "docker compose down -v",
         "migrate": "node ./migrate.ts | pnpm dlx pino-pretty",
         "test": "pnpm run /^test:/",
         "test:lint": "biome lint --write",
@@ -33,7 +32,8 @@
         "@faker-js/faker": "9.9.0",
         "@types/pg": "8.15.5",
         "kysely-codegen": "0.18.5",
-        "pino-pretty": "13.1.1"
+        "pino-pretty": "13.1.1",
+        "testcontainers": "^11.5.1"
     },
     "type": "module"
 }
