feat: simple setup postgis database for testing

--- a/apps/service-scrape/lib-db_service_scrape/package.json
+++ b/apps/service-scrape/lib-db_service_scrape/package.json
@@ -13,7 +13,8 @@
         "dist"
     ],
     "scripts": {
-        "migrate": "node ./migrate.ts | pnpm dlx pino-pretty",
+        "migrate": "node ./migrate.ts",
+        "generate": "node ./generate.ts",
         "test": "pnpm run /^test:/",
         "test:lint": "biome lint --write",
         "test:type": "tsc",
