--- a/apps/service-scrape/function-batch_scrape_suburbs/package.json
+++ b/apps/service-scrape/function-batch_scrape_suburbs/package.json
@@ -11,7 +11,9 @@
     },
     "devDependencies": {
         "@hono/vite-dev-server": "0.20.1",
-        "pino-pretty": "13.1.1"
+        "chromium-bidi": "^8.0.0",
+        "pino-pretty": "13.1.1",
+        "playwright": "^1.54.2"
     },
     "dependencies": {
         "@opentelemetry/api": "1.9.0",
@@ -27,6 +29,7 @@
         "hono": "4.9.0",
         "kysely": "0.28.4",
         "pino": "9.8.0",
+        "playwright-aws-lambda": "^0.11.0",
         "zod": "4.0.17"
     },
     "type": "module"
