--- a/apps/service-scrape/lib-db_service_scrape/package.json
+++ b/apps/service-scrape/lib-db_service_scrape/package.json
@@ -1,17 +1,9 @@
 {
     "name": "@service-scrape/lib-db_service_scrape",
-    "version": "1.0.0",
-    "module": "./dist/index.js",
-    "types": "./dist/index.d.ts",
     "exports": {
-        "import": {
-            "types": "./dist/index.d.ts",
-            "import": "./dist/index.js"
-        }
+        ".": "./dist/index.js",
+        "./dev": "./dist/dev/index.js"
     },
-    "files": [
-        "dist"
-    ],
     "scripts": {
         "migrate": "node ./migrate.ts",
         "generate": "node ./generate.ts",
@@ -20,7 +12,7 @@
         "test:type": "tsc",
         "test:unit": "vitest run --coverage",
         "dev:test:unit": "vitest --coverage",
-        "build": "tsup src/index.ts --format esm --dts --clean --sourcemap"
+        "build": "tsup"
     },
     "dependencies": {
         "dotenv": "17.2.1",
