--- a/apps/service-scrape/function-batch_scrape_suburbs/package.json
+++ b/apps/service-scrape/function-batch_scrape_suburbs/package.json
@@ -1,6 +1,5 @@
 {
     "name": "@service-scrape/function-batch_scrape_suburbs",
-    "version": "1.0.0",
     "scripts": {
         "test": "pnpm run /^test:/",
         "test:lint": "biome lint --write",
@@ -11,24 +10,33 @@
     },
     "devDependencies": {
         "@hono/vite-dev-server": "0.20.1",
+        "@types/common-errors": "^1.0.5",
         "chromium-bidi": "^8.0.0",
         "pino-pretty": "13.1.1",
         "playwright": "^1.54.2"
     },
     "dependencies": {
+        "@hono/otel": "^0.4.0",
         "@opentelemetry/api": "1.9.0",
+        "@opentelemetry/auto-instrumentations-node": "^0.62.1",
         "@opentelemetry/exporter-logs-otlp-proto": "0.203.0",
+        "@opentelemetry/exporter-metrics-otlp-proto": "^0.203.0",
         "@opentelemetry/exporter-trace-otlp-proto": "0.203.0",
-        "@opentelemetry/instrumentation-pino": "0.50.0",
+        "@opentelemetry/resources": "^2.0.1",
+        "@opentelemetry/sdk-logs": "^0.203.0",
+        "@opentelemetry/sdk-metrics": "^2.0.1",
         "@opentelemetry/sdk-node": "0.203.0",
-        "@opentelemetry/sdk-trace-base": "2.0.1",
+        "@opentelemetry/semantic-conventions": "^1.36.0",
         "@service-scrape/lib-db_service_scrape": "workspace:*",
         "@turf/turf": "7.2.0",
         "cheerio": "1.1.2",
+        "common-errors": "^1.2.0",
         "dotenv": "17.2.1",
         "hono": "4.9.0",
+        "http-status-codes": "^2.3.0",
         "kysely": "0.28.4",
         "pino": "9.8.0",
+        "pino-opentelemetry-transport": "^1.0.1",
         "playwright-aws-lambda": "^0.11.0",
         "zod": "4.0.17"
     },
