--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
         "knip": "knip",
         "bump": "exec syncpack update && exec syncpack fix && pnpm i",
         "test": "nx run-many -t test:lint test:type test:unit test:perf test:arch",
-        "test:arch": "pnpm depcruise -v -T dot . | dot -T svg | depcruise-wrap-stream-in-html > dependency-graph.html && depcruise .",
+        "test:arch": "depcruise .",
         "build": "nx run-many -t build",
         "docker:up": "nx affected -t docker:up",
         "docker:down": "nx affected -t docker:down",
@@ -14,7 +14,7 @@
         "test:ci": "nx affected -t test:lint test:type test:unit test:perf"
     },
     "devDependencies": {
-        "@biomejs/biome": "2.1.4",
+        "@biomejs/biome": "2.2.0",
         "@types/node": "*",
         "@vitest/coverage-v8": "3.2.4",
         "dependency-cruiser": "^17.0.1",
@@ -24,7 +24,7 @@
         "syncpack": "14.0.0-alpha.19",
         "tsup": "8.5.0",
         "typescript": "~5.9.2",
-        "vite": "7.1.1",
+        "vite": "7.1.2",
         "vitest": "3.2.4"
     },
     "simple-git-hooks": {
