--- a/apps/service-scrape/function-batch_scrape_suburbs/package.json
+++ b/apps/service-scrape/function-batch_scrape_suburbs/package.json
@@ -13,7 +13,8 @@
         "@types/common-errors": "^1.0.5",
         "chromium-bidi": "^8.0.0",
         "pino-pretty": "13.1.1",
-        "playwright": "^1.54.2"
+        "playwright": "^1.54.2",
+        "ssh2": "^1.16.0"
     },
     "dependencies": {
         "@hono/otel": "^0.4.0",
