--- a/apps/service-scrape/function-batch_scrape_suburbs/package.json
+++ b/apps/service-scrape/function-batch_scrape_suburbs/package.json
@@ -13,8 +13,7 @@
         "@types/common-errors": "^1.0.5",
         "chromium-bidi": "^8.0.0",
         "pino-pretty": "13.1.1",
-        "playwright": "^1.54.2",
-        "ssh2": "^1.16.0"
+        "playwright": "^1.54.2"
     },
     "dependencies": {
         "@hono/otel": "^0.4.0",
@@ -37,7 +36,6 @@
         "http-status-codes": "^2.3.0",
         "kysely": "0.28.4",
         "pino": "9.8.0",
-        "pino-opentelemetry-transport": "^1.0.1",
         "playwright-aws-lambda": "^0.11.0",
         "zod": "4.0.17"
     },
