--- a/apps/service-scrape/script/package.json
+++ b/apps/service-scrape/script/package.json
@@ -7,12 +7,5 @@
         "test:lint": "biome lint --write",
         "test:type": "tsc"
     },
-    "dependencies": {
-        "@service-scrape/lib-db_service_scrape": "workspace:*"
-    },
-    "type": "module",
-    "devDependencies": {
-        "pino": "9.8.0",
-        "pino-pretty": "13.1.1"
-    }
+    "type": "module"
 }
