--- a/apps/service-scrape/function-batch_scrape_suburbs/package.json
+++ b/apps/service-scrape/function-batch_scrape_suburbs/package.json
@@ -28,6 +28,7 @@
         "@opentelemetry/sdk-node": "0.203.0",
         "@opentelemetry/semantic-conventions": "^1.36.0",
         "@service-scrape/lib-db_service_scrape": "workspace:*",
+        "@service-scrape/lib-australia_amenity": "workspace:*",
         "@turf/turf": "7.2.0",
         "cheerio": "1.1.2",
         "common-errors": "^1.2.0",
