chore: more accurate folder name - just grafana

--- a/apps/observability/grafana/package.json
+++ b/apps/observability/grafana/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@observability/grafana-lgtm",
+    "name": "@observability/grafana",
     "private": true,
     "scripts": {
         "format": "biome format --write",
