--- a/apps/observability/grafana/package.json
+++ b/apps/observability/grafana/package.json
@@ -7,8 +7,8 @@
         "test:type": "tsc",
         "generate": "openapi-typescript --array-length true --properties-required-by-default true './src/api/openapi.json' -o './src/api/schema.d.ts' && biome format --write",
         "build": "node ./src/iac/index.ts",
-        "dash:export": "node ./src/export.ts && biome format --write",
-        "dash:import": "node ./src/import.ts"
+        "grafana:export": "node ./src/export.ts && biome format --write",
+        "grafana:import": "node ./src/import.ts"
     },
     "type": "module",
     "devDependencies": {
