chore: move docker compose to outer folder

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,7 +20,7 @@ services:
   # Database for "service-scrape" quantum - https://www.youtube.com/watch?v=pwW6H6UJDWg
   lib-db_service_scrape:
     build:
-      context: ./service-scrape
+      context: ./apps/service-scrape
       dockerfile: postgis.dockerfile
     ports:
       - "54320:5432"
