--- a/apps/observability/grafana/package.json
+++ b/apps/observability/grafana/package.json
@@ -3,6 +3,7 @@
     "private": true,
     "scripts": {
         "format": "biome format --write",
+        "test:lint": "biome lint --write",
         "generate": "openapi-typescript --array-length true --properties-required-by-default true './src/api/openapi.json' -o './src/api/schema.d.ts' && biome format --write",
         "grafana:export": "node ./src/export.ts && biome format --write",
         "grafana:import": "node ./src/import.ts"
