--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@biomejs/biome": "2.2.0",
         "@types/node": "*",
         "@vitest/coverage-v8": "3.2.4",
+        "aws-cdk": "^2.1026.0",
         "dependency-cruiser": "^17.0.1",
         "knip": "5.62.0",
         "nx": "21.3.11",
