ci: use aws cdk for deployment

--- a/apps/service-scrape/function-scrape_locality/package.json
+++ b/apps/service-scrape/function-scrape_locality/package.json
@@ -1,6 +1,7 @@
 {
     "name": "@service-scrape/function-scrape_locality",
     "scripts": {
+        "format": "biome format --write",
         "test": "pnpm run /^test:/",
         "test:lint": "biome lint --write",
         "test:type": "tsc",
