--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@types/node": "*",
         "@vitest/coverage-v8": "3.2.4",
         "aws-cdk": "^2.1026.0",
+        "aws-cdk-local": "^3.0.1",
         "dependency-cruiser": "^17.0.1",
         "knip": "5.62.0",
         "nx": "21.3.11",
