--- a/apps/service-scrape/lib-db_service_scrape/package.json
+++ b/apps/service-scrape/lib-db_service_scrape/package.json
@@ -6,7 +6,7 @@
     },
     "scripts": {
         "format": "biome format --write",
-        "migrate": "node ./migrate.ts",
+        "migrate": "pnpm dlx tsx ./migrate.ts",
         "generate": "node ./generate.ts && biome format --write",
         "test": "pnpm run /^test:/",
         "test:lint": "biome lint --write",
