--- a/apps/service-scrape/function-scrape_locality/package.json
+++ b/apps/service-scrape/function-scrape_locality/package.json
@@ -2,6 +2,7 @@
     "name": "@service-scrape/function-scrape_locality",
     "scripts": {
         "format": "biome format --write",
+        "puppeteer": "pnpm dlx @puppeteer/browsers install chrome-headless-shell@stable && mv ./chrome-headless-shell/*/* ./.puppeteer && rm -r chrome-headless-shell",
         "test": "pnpm run /^test:/",
         "test:lint": "biome lint --write",
         "test:type": "tsc",
@@ -11,17 +12,22 @@
     },
     "devDependencies": {
         "@hono/vite-dev-server": "0.20.1",
+        "@sparticuz/chromium": "^138.0.2",
         "@types/common-errors": "^1.0.5",
         "chromium-bidi": "^8.0.0",
+        "esbuild": "^0.25.9",
         "pino": "9.8.0",
         "pino-pretty": "13.1.1",
         "playwright": "^1.54.2"
     },
     "dependencies": {
+        "@aws-sdk/client-s3": "^3.879.0",
+        "@aws-sdk/s3-request-presigner": "^3.879.0",
         "@hono/otel": "^0.4.0",
         "@observability/lib-opentelemetry": "workspace:*",
         "@service-scrape/lib-australia_amenity": "workspace:*",
         "@service-scrape/lib-db_service_scrape": "workspace:*",
+        "@sparticuz/chromium-min": "^138.0.2",
         "@turf/turf": "7.2.0",
         "cheerio": "1.1.2",
         "common-errors": "^1.2.0",
@@ -29,6 +35,8 @@
         "http-status-codes": "^2.3.0",
         "kysely": "0.28.4",
         "playwright-aws-lambda": "^0.11.0",
+        "puppeteer": "^24.18.0",
+        "puppeteer-core": "^24.18.0",
         "zod": "4.0.17"
     },
     "type": "module"
