--- a/apps/service-scrape/function-scrape_locality/package.json
+++ b/apps/service-scrape/function-scrape_locality/package.json
@@ -12,13 +12,10 @@
     },
     "devDependencies": {
         "@hono/vite-dev-server": "0.20.1",
-        "@sparticuz/chromium": "^138.0.2",
         "@types/common-errors": "^1.0.5",
         "chromium-bidi": "^8.0.0",
-        "esbuild": "^0.25.9",
         "pino": "9.8.0",
-        "pino-pretty": "13.1.1",
-        "playwright": "^1.54.2"
+        "pino-pretty": "13.1.1"
     },
     "dependencies": {
         "@aws-sdk/client-s3": "^3.879.0",
@@ -34,8 +31,6 @@
         "hono": "4.9.0",
         "http-status-codes": "^2.3.0",
         "kysely": "0.28.4",
-        "playwright-aws-lambda": "^0.11.0",
-        "puppeteer": "^24.18.0",
         "puppeteer-core": "^24.18.0",
         "zod": "4.0.17"
     },
