--- a/apps/service-scrape/function-scrape_locality_trigger/package.json
+++ b/apps/service-scrape/function-scrape_locality_trigger/package.json
@@ -1,5 +1,6 @@
 {
     "name": "@service-scrape/function-scrape_locality_trigger",
+    "private": true,
     "scripts": {
         "format": "biome format --write",
         "test": "pnpm run /^test:/",
