--- a/apps/service-scrape/lib-db_service_scrape/package.json
+++ b/apps/service-scrape/lib-db_service_scrape/package.json
@@ -1,5 +1,6 @@
 {
     "name": "@service-scrape/lib-db_service_scrape",
+    "private": true,
     "exports": {
         ".": "./dist/index.js",
         "./dev": "./dist/dev/index.js"
