--- a/apps/service-scrape/cdk/package.json
+++ b/apps/service-scrape/cdk/package.json
@@ -1,18 +1,24 @@
 {
     "name": "@service-scrape/cdk",
+    "private": true,
+    "exports": {
+        ".": "./dist/index.js"
+    },
     "scripts": {
         "format": "biome format --write",
         "test": "pnpm /test:.*/",
         "cdk:synth": "cdk synth",
         "cdk:dev": "cdk deploy -m direct --no-rollback --asset-parallelism true --hotswap-fallback --progress",
-        "cdk:destroy": "cdk destroy"
+        "cdk:destroy": "cdk destroy",
+        "build": "tsup"
     },
     "devDependencies": {
         "@observability/lib-opentelemetry": "workspace:*",
         "@service-scrape/lib-db_service_scrape": "workspace:*",
         "aws-cdk-lib": "^2.212.0",
         "cdk-nag": "^2.37.15",
-        "constructs": "^10.4.2"
+        "constructs": "^10.4.2",
+        "tsup": "^8.5.0"
     },
     "type": "module"
 }
