ci: run on linux arm64 if possible

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -7,8 +7,7 @@ on:
 
 jobs:
   test-unit:
-    # runs-on: ubuntu-24.04-arm
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04-arm
     steps:
       - name: Checkout branch
         uses: actions/checkout@v4
