--- a/biome.json
+++ b/biome.json
@@ -26,7 +26,13 @@
         }
     },
     "files": {
-        "includes": ["**/*", "!**/coverage/**", "!**/dist/**", "!**/node_modules/**"],
+        "includes": [
+            "**/*",
+            "!**/coverage/**",
+            "!**/dist/**",
+            "!**/node_modules/**",
+            "!**/.puppeteer/**"
+        ],
         "ignoreUnknown": true
     },
     "assist": {
