--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -9,36 +9,17 @@ jobs:
   test-unit:
     runs-on: ubuntu-24.04-arm
     steps:
-      - name: Checkout branch
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
+      - name: Setup dependencies Nx
+        uses: ./.github/actions/setup-dependencies-nx
 
-      - name: Nx select BASE + HEAD SHAs
-        id: setSHAs
-        uses: nrwl/nx-set-shas@v4
-
-      - name: Output Nx select BASE + HEAD SHAs
-        run: |
-          echo "BASE: ${{ steps.setSHAs.outputs.base }}"
-          echo "HEAD: ${{ steps.setSHAs.outputs.head }}"
-
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v4
-        with:
-          # Reduce installation time with cache - https://github.com/pnpm/action-setup/tree/v4/?tab=readme-ov-file#use-cache-to-reduce-installation-time
-          run_install: false
-
-      - name: Setup node
-        uses: actions/setup-node@v4
-        with:
-          node-version: 24
-          cache: 'pnpm'
-
-      - name: Install dependencies
-        run: pnpm i --no-frozen-lockfile
-
-      - name: Build
-        run: pnpm build:ci
       - name: Test
-        run: pnpm test:ci
+        run: pnpm nx affected -t test:unit
+
+  test-lint:
+    runs-on: ubuntu-24.04-arm
+    steps:
+      - name: Setup dependencies Nx
+        uses: ./.github/actions/setup-dependencies-nx
+
+      - name: Test
+        run: pnpm nx affected -t test:lint test:type
