--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -9,23 +9,8 @@ jobs:
   deploy-observability:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout branch
-        uses: actions/checkout@v4
-
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v4
-        with:
-          # Reduce installation time with cache - https://github.com/pnpm/action-setup/tree/v4/?tab=readme-ov-file#use-cache-to-reduce-installation-time
-          run_install: false
-
-      - name: Setup node
-        uses: actions/setup-node@v4
-        with:
-          node-version: 24
-          cache: 'pnpm'
-
-      - name: Install dependencies
-        run: pnpm i --no-frozen-lockfile
+      - name: Setup dependencies
+        uses: ./.github/actions/setup-dependencies-nx
 
       - name: Deploy observability
         run: pnpm -r grafana:import
