ci: fix checkout branch before using composite actions

--- a/.github/actions/setup-ci/action.yaml
+++ b/.github/actions/setup-ci/action.yaml
@@ -3,7 +3,7 @@ description: "Prepare CI job. Checkout code with history, then setup Nx, node an
 runs:
   using: "composite"
   steps:
-    - name: Checkout branch
+    - name: Deep checkout branch
       uses: actions/checkout@v4
       with:
         fetch-depth: 0
