--- a/.github/actions/setup-ci/action.yaml
+++ b/.github/actions/setup-ci/action.yaml
@@ -1,13 +1,8 @@
 name: "Setup CI"
-description: "Prepare CI job. Checkout code with history, then setup Nx, node and pnpm. Install dependencies and build affected packages"
+description: "Prepare CI job. Setup Nx, node and pnpm. Install dependencies and build affected packages"
 runs:
   using: "composite"
   steps:
-    - name: Deep checkout branch
-      uses: actions/checkout@v4
-      with:
-        fetch-depth: 0
-
     - name: Nx select BASE + HEAD SHAs
       id: setSHAs
       uses: nrwl/nx-set-shas@v4
