--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@types/node": "*",
         "@vitest/coverage-v8": "3.2.4",
         "aws-cdk": "^2.1026.0",
+        "esbuild": "^0.25.9",
         "knip": "5.62.0",
         "nx": "21.3.11",
         "simple-git-hooks": "2.13.1",
