--- a/apps/service-scrape/stack-service_scrape_pipeline/package.json
+++ b/apps/service-scrape/stack-service_scrape_pipeline/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@service-scrape/cdk",
+    "name": "@service-scrape/stack-service_scrape_pipeline",
     "private": true,
     "exports": {
         ".": "./dist/index.js"
@@ -9,11 +9,13 @@
         "test": "pnpm /test:.*/",
         "cdk:synth": "cdk synth",
         "cdk:dev": "cdk deploy -m direct --no-rollback --asset-parallelism true --hotswap-fallback --progress",
-        "cdk:destroy": "cdk destroy",
         "build": "tsup"
     },
     "devDependencies": {
+        "@infra/common": "workspace:*",
         "@observability/lib-opentelemetry": "workspace:*",
+        "@service-scrape/function-scrape_locality_trigger": "workspace:*",
+        "@service-scrape/function-scrape_locality": "workspace:*",
         "@service-scrape/lib-db_service_scrape": "workspace:*",
         "aws-cdk-lib": "^2.212.0",
         "cdk-nag": "^2.37.15",
