--- a/apps/service-scrape/stack-service_scrape_query/package.json
+++ b/apps/service-scrape/stack-service_scrape_query/package.json
@@ -6,7 +6,7 @@
     },
     "scripts": {
         "format": "biome format --write",
-        "test": "pnpm /test:.*/",
+        "test:type": "tsc",
         "cdk:synth": "cdk synth",
         "cdk:dev": "cdk deploy -m direct --no-rollback --asset-parallelism true --hotswap-fallback --progress",
         "build": "tsup"
